Cambie el HTML para el sitio.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,33 +1,9 @@
 <html>
-  <head>
-    <title>Django DAW blog</title>
-  </head>
-<body>
-  <div>
-    <h1><a href="">Bienvenidos a Django DAW Blog</a></h1>
-  </div>
-
-<div>
-  <p>publicado: 26.04.2020, 10.34</p>
-  <h2><a href="">Mi primer post</a></h2>
-  <p>
-Los poemas cortos son una forma de expresión artística muy 
-antigua que se ha transformado con el tiempo, pero que ha mantenido 
-su esencia. Expresan las emociones o representan el mundo de un modo
-profundo, poético. Los temas que abordan son casi infinitos, 
-y las formas de hacerlo, muy diversas
-  </p>
-</div>
-
-<div>
-  <p>publicado: 26.04.2020, 10.31</p>
-  <h2><a href="">Mi segundo post</a></h2>
-  <p>
-La literatura es una disciplina que usa el lenguaje de forma
- estética. El término literatura proviene del vocablo 
- latínlitterae, que hace referencia a la acumulación de 
- conocimientos que nos guíen al correcto modo de escribir y de leer.
-  </p>
-</div>
+<head>
+<title>Victoria blog</title>
+</head>
+<body bgcolor=”#D8CEF6”><h1><center>Bienvenidos a mi blog</center></h1><font size=”3″ face=”Comic Sans MS, Arial, MS Sans Serif”>
+ <center>Donde encontraras <b>posts</b> interesantes</font><h2><center><center><u>Mis posts</u><center>
+</h2><font size=”3″ face=”Comic Sans MS, Arial, MS Sans Serif”>
 </body>
 </html>
