--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,16 +1,13 @@
-<html>
-<head>
-<title>Victoria blog</title>
-</head>
-<body bgcolor=”#D8CEF6”><h1><center>Bienvenidos a mi blog</center></h1><font size=”3″ face=”Comic Sans MS, Arial, MS Sans Serif”>
- <center>Donde encontraras <b>posts</b> interesantes</font><h2><center><center><u>Mis posts</u><center>
-</h2><font size=”3″ face=”Comic Sans MS, Arial, MS Sans Serif”>
-{% for post in posts %}
-<div>
-<p>published: {{ post.published_date }}</p>
-<h1><a href="">{{ post.title }}</a></h1>
-<p>{{ post.text|linebreaksbr }}</p>
-</div>
-{% endfor %}
-</body>
-</html>
+{% extends 'blog/base.html' %}
+
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date"> 
+                <p>publicado: {{ post.published_date }}</p>
+            </div>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
+    {% endfor %}
+{% endblock %}
