--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -22,6 +22,10 @@ type="text/css"
 </head>
 <body>
 <div class="page-header">
+{% if user.is_authenticated %}
+<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon
+glyphicon-plus"></span></a>
+{% endif %}
 <center><h2><a href="/">Mis posts</a></h2></center>
 </div>
 <div class="content container">
