--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -23,18 +23,45 @@ type="text/css"
 <body>
 <div class="page-header">
 {% if user.is_authenticated %}
-<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon
-glyphicon-plus"></span></a>
+<a href="{% url 'post_new' %}" class="top-menu"
+><span class="glyphicon glyphicon-plus"></span
+></a>
+
+<a href="{% url 'post_draft_list' %}" class="top-menu"
+><span class="glyphicon glyphicon-edit"></span
+></a>
+{% else %}
+<a href="{% url 'login' %}" class="top-menu"
+><span class="glyphicon glyphicon-lock"></span
+></a>
 {% endif %}
 <center><h2><a href="/">Mis posts</a></h2></center>
 </div>
 <div class="content container">
 <div class="row">
 <div class="col-md-8">
-{% block content %}
-{% endblock %}
+{% block content %} {% endblock %}
 </div>
 </div>
+</div>
+<div class="page-header">
+{% if user.is_authenticated %}
+<a href="{% url 'post_new' %}" class="top-menu"
+><span class="glyphicon glyphicon-plus"></span
+></a>
+<a href="{% url 'post_draft_list' %}" class="top-menu"
+><span class="glyphicon glyphicon-edit"></span
+></a>
+<p class="top-menu">
+Hello {{ user.username }}
+<small>(<a href="{% url 'logout' %}">Log out</a>)</small>
+</p>
+{% else %}
+<a href="{% url 'login' %}" class="top-menu"
+><span class="glyphicon glyphicon-lock"></span
+></a>
+{% endif %}
+<center><h1><a href="/">Victoria blog</a></h1></center>
 </div>
 </body>
 </html>
