--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -17,4 +17,26 @@
 <h1>{{ post.title }}</h1>
 <p>{{ post.text|linebreaksbr }}</p>
 </div>
+<hr />
+<a class="btn btn-default" href="{% url 'add_comment_to_post' pk=post.pk %}"
+>Add comment</a>
+{% for comment in post.comments.all %} {% if user.is_authenticated or
+comment.approved_comment %}
+<div class="comment">
+<div class="date">
+{{ comment.created_date }} {% if user.is_authenticated %}
+<a class="btn btn-default" href="{% url 'comment_remove' pk=comment.pk %}"
+><span class="glyphicon glyphicon-remove"></span
+></a>
+{% endif %} {% if not comment.approved_comment %}
+<a class="btn btn-default" href="{% url 'comment_approve' pk=comment.pk %}"
+><span class="glyphicon glyphicon-ok"></span></a>
+{% endif %}
+</div>
+<strong>{{ comment.author }}</strong>
+<p>{{ comment.text|linebreaks }}</p>
+</div>
+{% empty %}
+<p>Sin comentarios :(</p>
+{% endfor %}
 {% endblock %}
