--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,4 +1,4 @@
-{% extends 'blog/base.html' %}
+{% extends 'blog/base.html' %} 
 
 {% block content %}
     {% for post in posts %}
@@ -9,5 +9,14 @@
             <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
+{% if user.is_authenticated %}
+<a href="{% url 'post_detail' pk=post.pk%}"
+>Comentarios: {{ post.comments.count }}</a
+>
+{% else %}
+<a href="{% url 'post_detail' pk=post.pk%}"
+>Comentarios: {{ post.approved_comments.count }}</a
+>
+{% endif %}
     {% endfor %}
-{% endblock %}
+ {% endblock content %}
